Insert Chapter 5 into literature-projects.html
Added Chapter 5: 'Under Suspicion' to the literature project.

--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1955,7 +1955,183 @@ BeautyPlus. Я даже не помнила, как установила это 
 <strong style="color: #003D7A;">Конец главы 4</strong></div>
                         </div>
                     </div>
-                    
+
+                                  <!-- Глава 5 -->
+                    <div class="chapter-accordion">
+                        <div class="chapter-header" onclick="toggleChapter(this)">
+                            <div class="chapter-info">
+                                <h5>Глава 5. Под подозрением</h5>
+                                <p>Даша просит помощи у Артёма и понимает, что все жертвы связаны одним ботом, 
+                                    собирающим данные через "бесплатные" приложения.</p>
+                            </div>
+                            <div class="chapter-actions">
+                                <a href="files/books/chapters/chapter-05.pdf" download class="chapter-pdf-btn" onclick="event.stopPropagation();">📥 PDF</a>
+                                <span class="chapter-icon">▼</span>
+                            </div>
+                        </div>
+                        <div class="chapter-content">
+                            <div class="chapter-text">Глава 5. Под подозрением
+Когда дверь кабинета информатики открылась и завуч произнесла моё имя, я понял: что-то случилось.
+— Беляев, к директору. Срочно.
+Двадцать три пары глаз уставились на меня. Кто-то хихикнул. Вика Морозова, сидевшая у окна, даже не пыталась скрыть торжествующую улыбку.
+Я встал, машинально поправил очки. Ноги казались ватными.
+По дороге к кабинету директора я пытался вспомнить, что мог натворить. Домашку сдал вовремя. На уроках не разговаривал. В школьную сеть не лазил с прошлого года — после того случая с принтером, который я "починил" без разрешения.
+А потом я увидел машину у входа. Белую, с синей полосой.
+Полиция.
+Желудок сжался в комок размером с кулак.
+В приёмной сидела секретарша и делала вид, что не смотрит на меня. Дверь в кабинет директора была приоткрыта, оттуда доносились голоса.
+— ...технические навыки, это очевидно, — говорила Елена Викторовна. — Весь класс знает, что он у нас главный компьютерщик.
+— Технические навыки — это не доказательство вины, — ответил мужской голос. Спокойный, низкий. — Иначе пришлось бы арестовать половину IT-отрасли страны.
+Я постучал. Пальцы дрожали.
+— Входи, Беляев.
+Кабинет директора я знал хорошо — бывал здесь после истории с принтером. Массивный стол, портрет президента, шкаф с кубками за спортивные достижения школы.
+Но сегодня за столом сидела не только Елена Викторовна.
+Мужчина лет сорока в строгом костюме поднялся мне навстречу. Короткая стрижка, внимательный взгляд, усталые глаза. Под пиджаком угадывались широкие плечи — явно не кабинетный работник.
+— Артём Беляев? — Он протянул руку. — Майор Островский, управление "К". Присаживайся.
+Управление "К". Киберполиция.
+Я пожал его руку — ладонь была сухой и твёрдой — и сел на стул напротив. Спина прямая, руки на коленях. Папа всегда говорил: если нервничаешь, контролируй тело. Тело контролирует — разум следует.
+— Ты знаешь, почему я здесь? — спросил майор.
+— Догадываюсь. — Голос звучал ровнее, чем я ожидал. — Из-за атак на школу. Утечка фотографий, мошенничество с деньгами.
+Он кивнул, не отводя взгляда.
+— Расскажи мне о своих технических навыках.
+Я сглотнул.
+— Программирую на Python и JavaScript. Немного знаю C++. Интересуюсь кибербезопасностью. Читаю статьи, смотрю видео, иногда решаю задачки на специальных платформах.
+— CTF-соревнования?
+— Да. Capture The Flag. Это легальные хакерские турниры, где нужно находить уязвимости в тестовых системах.
+Майор что-то записал в блокнот.
+— Впечатляет для четырнадцатилетнего. Где научился?
+— Папа программист. Он меня учит с десяти лет.
+Елена Викторовна поджала губы. Я знал, что она думает: вот оно, доказательство. Мальчик слишком умный, слишком много знает. Наверняка он.
+Но майор не торопился с выводами.
+— Артём, я задам тебе несколько вопросов. Отвечай честно. Если не знаешь — так и скажи. Если не хочешь отвечать без родителей — тоже твоё право. Понял?
+Я кивнул.
+— Где ты был в среду вечером, примерно с восьми до одиннадцати?
+Среда. Это когда Стас потерял деньги на крипто-скаме.
+— Дома. Делал уроки, потом... — я запнулся. Потом играл в MMORPG под ником Shadowbyte. Притворялся двадцатилетним студентом. Врал людям о своём возрасте.
+— Потом? — Майор смотрел выжидающе.
+— Потом сидел в интернете. Играл.
+— Во что?
+Сердце забилось быстрее.
+— В онлайн-игру. Стратегию.
+Технически не ложь. MMORPG — тоже своего рода стратегия. Просто... не вся правда.
+— Кто-то может подтвердить?
+— Родители были дома. И... — я замялся. — Есть логи. Игровые серверы записывают, когда игрок заходит и выходит. С какого IP-адреса.
+Майор поднял бровь.
+— Ты знаешь про логи и IP-адреса?
+— Это базовые вещи. Каждое действие в интернете оставляет след. Время, место, устройство. — Я поправил очки. — Если бы я хотел совершить кибератаку, я бы точно не делал это с домашнего компьютера. Это... — я поискал слово, — непрофессионально.
+Елена Викторовна фыркнула.
+— Вот видите! Он знает, как скрыть следы!
+— Он знает, как работает система, — поправил майор. — Это не одно и то же.
+Он повернулся ко мне.
+— Артём, ты когда-нибудь получал доступ к школьной сети без разрешения?
+Вот оно. Момент истины.
+— Один раз. В прошлом году. Принтер в кабинете информатики завис, а учитель не мог его перезагрузить удалённо. Я зашёл в панель управления и исправил. Меня потом вызывали к директору.
+— И что было?
+— Предупреждение. Сказали, что даже с хорошими намерениями нельзя лезть в чужие системы без разрешения.
+Майор кивнул. Что-то в его взгляде изменилось — не знаю, что именно, но напряжение чуть спало.
+— Хорошо, что ты это понимаешь. Многие взрослые не понимают.
+Он закрыл блокнот.
+— Последний вопрос. Ты знаешь, кто мог бы совершить эти атаки?
+Я задумался. По-настоящему задумался, не для вида.
+— Кто-то, кто хорошо знает школу. Знает учеников, их привычки, слабости. — Я посмотрел майору в глаза. — Бот использует личную информацию. Знает, кто с кем дружит, кто чего боится. Это не случайный хакер из интернета. Это кто-то... близкий.
+Майор долго смотрел на меня. Потом медленно кивнул.
+— Спасибо, Артём. Ты свободен. Пока.
+Я уже встал, когда дверь распахнулась.
+— Артём ничего не делал!
+Даша. Конечно, Даша.
+Она влетела в кабинет, игнорируя возмущённый возглас секретарши. Волосы растрёпаны, щёки красные. В глазах — тот огонь, который я видел, когда она защищала меня от Стаса в пятом классе.
+— Козлова! — Елена Викторовна вскочила. — Как ты смеешь врываться!
+— Артём не хакер! — Даша не обратила на неё внимания. — Он мне помогал! Объяснял, как защититься от бота! Зачем ему это делать, если он сам его создал?
+Майор поднял руку.
+— Спокойно. Как тебя зовут?
+— Даша. Дарья Козлова. Я... — она запнулась,— Вы из полиции?
+— Майор Островский. И я ни в чем не обвиняю твоего друга. Мы просто разговаривали.
+Даша перевела взгляд на меня. Я кивнул — всё в порядке.
+— Я видела, как его увели. Весь класс видел. Вика сразу начала шептаться, что его арестовали...
+Майор встал и подошёл к нам.
+— Дарья, у тебя тоже были проблемы с этим ботом?
+Даша замерла. Я видел, как она колеблется. Рассказать — значит признать, что и она жертва. Что тоже облажалась.
+— Да, — сказала она наконец. — С меня списали деньги. И... он мне угрожает.
+— Угрожает чем?
+Пауза.
+— Фотографиями. Личными.
+Майор кивнул. Без осуждения, без "а зачем ты их делала". Просто принял информацию.
+— Ты сохранила переписку?
+— Да. Скриншоты.
+— Хорошо. Это важно. — Он достал визитку. — Вот мой номер. Если получишь новые сообщения — сразу мне. Не отвечай, не удаляй. Просто сохрани и позвони.
+Даша взяла визитку. Руки у неё тоже дрожали.
+Мы вышли из кабинета вместе. В коридоре было пусто — шёл урок.
+— Ты как? — спросила Даша шёпотом.
+— Нормально. — Я прислонился к стене, закрыл глаза. — Спасибо, что пришла. Хотя это было безрассудно.
+— Это было правильно.
+Я усмехнулся. Типичная Даша.
+— Майор вроде нормальный, — сказала она задумчиво. — Не такой, как я думала.
+— Что ты думала?
+— Ну, что он будет орать и обвинять. Как в фильмах.
+— Он профессионал. Профессионалы не орут. Они слушают.
+Мы помолчали.
+— Артём, — Даша понизила голос. — Бот дал мне двадцать четыре часа. Время почти вышло. Что мне делать?
+Я открыл глаза.
+— Ничего. Не отвечай. Шантажисты питаются страхом. Если ты реагируешь — они знают, что крючок работает. Если молчишь — им приходится придумывать новые способы давления.
+— А если он выложит фотки?
+— Тогда мы будем разбираться. Вместе. Но скорее всего — не выложит. Пока ты потенциальная жертва, у него есть рычаг. Как только он его использует — рычага больше нет.
+Даша кивнула, но я видел — она не до конца убеждена.
+— Пойдём обратно, — сказал я. — Урок ещё не кончился.
+— Вика наверняка уже всем рассказала, что тебя увезли в наручниках.
+— Тогда ей будет интересно увидеть меня живым и свободным.
+Даша фыркнула. Почти улыбнулась.
+Мы вернулись в кабинет информатики вместе. Учитель только покосился на нас, но ничего не сказал — видимо, завуч предупредила. Я сел за свой компьютер. Даша — за свой, через два ряда. Вика уставилась на меня так, будто увидела призрака.
+Учитель что-то объяснял про электронные таблицы, но я не слушал.
+В голове крутилось одно: логи.
+Майор спросил про алиби. Я сказал, что есть логи. И они действительно есть. Игровые серверы фиксируют каждый вход, каждый выход, каждое действие. Если полиция запросит данные — они увидят, что аккаунт Shadowbyte был активен в моменты атак.
+Но они также увидят, что Shadowbyte — это якобы двадцатилетний студент-программист из Москвы.
+А не четырнадцатилетний школьник из провинции.
+Я создал этот аккаунт два года назад. Мне было двенадцать, и меня никто не воспринимал всерьёз. "Маленький", "ботаник", "иди уроки делай". В игре я мог быть кем угодно. Взрослым. Уверенным. Лидером гильдии, которого уважают.
+Я не делал ничего плохого. Не обманывал людей ради денег. Просто... притворялся. Исследовал, каково это — быть другим.
+Но попробуй объяснить это полиции. Или родителям. Или Даше.
+"Ты врал людям о своём возрасте? Два года?"
+Звучит ужасно. Даже если намерения были безобидными.
+Телефон завибрировал в кармане. Я вытащил его под партой, прикрывая рукой.
+Telegram. Неизвестный аккаунт без аватарки. 
+Сообщение.
+"Привет, Shadowbyte."
+Кровь застыла в жилах.
+"Интересный разговор у тебя был с майором. Про логи, про IP-адреса. Умный мальчик."
+Я оглянулся. Класс как класс. Все смотрят на доску или в свои экраны. Никто не смотрит на меня.
+Новое сообщение.
+"Но ты кое-что забыл упомянуть, правда? Например, что лидер гильдии 'Тёмный Альянс' — не двадцатилетний студент, а восьмиклассник, который врёт о своём возрасте уже два года."
+Пальцы онемели. Телефон чуть не выскользнул из рук.
+"Интересно, что скажет майор Островский, когда узнает? Или твои друзья по гильдии? Или... Даша?"
+Пауза. Три точки — кто-то печатает.
+"Врать нехорошо, Артём. Особенно тем, кто тебе доверяет. Но не переживай. Твой секрет в безопасности. Пока ты не лезешь, куда не просят."
+И в конце — эмодзи.
+👻
+Призрак.
+Он знает. Знает про Shadowbyte. Знает про гильдию. Знает, что я врал.
+Откуда? Как?
+Я всегда был осторожен. VPN, отдельная почта, никаких реальных данных. Даже фото нигде не выкладывал.
+Но он нашёл. Как-то связал точки. Вычислил.
+И теперь у него есть рычаг.
+Учитель что-то спросил. Я ответил машинально — не помню что. Класс засмеялся. Наверное, я сказал глупость.
+Неважно.
+Важно другое.
+Призрак следит за мной. Следит за всеми нами. Знает наши секреты, наши страхи, наши слабости.
+И использует их как оружие.
+Звонок. Урок закончился.
+Я встал, машинально собирая вещи. Руки всё ещё дрожали.
+— Эй. — Даша возникла рядом. — Ты весь белый. Что случилось?
+Я посмотрел на неё. На Вику, которая демонстративно прошла мимо, задев меня плечом. На одноклассников, которые шептались и косились в нашу сторону.
+— Не здесь, — сказал я тихо. — После уроков. Нужно поговорить.
+— О чём?
+Я помедлил. В кармане лежал телефон с сообщением от Призрака. С угрозой, которая могла разрушить всё.
+— О том, кто я на самом деле.
+Даша нахмурилась, но кивнула.
+Может, пора перестать врать.
+Хотя бы кому-то одному.
+
+<strong style="color: #003D7A;">Конец главы 5</strong></div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Кнопки управления главами -->
