--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1961,8 +1961,7 @@ BeautyPlus. Я даже не помнила, как установила это 
                         <div class="chapter-header" onclick="toggleChapter(this)">
                             <div class="chapter-info">
                                 <h5>Глава 5. Под подозрением</h5>
-                                <p>Даша просит помощи у Артёма и понимает, что все жертвы связаны одним ботом, 
-                                    собирающим данные через "бесплатные" приложения.</p>
+                                <p>Технические навыки Артёма делают подозреваемым в атаках на школу.</p>
                             </div>
                             <div class="chapter-actions">
                                 <a href="files/books/chapters/chapter-05.pdf" download class="chapter-pdf-btn" onclick="event.stopPropagation();">📥 PDF</a>
