--- a/literature-projects.html
+++ b/literature-projects.html
@@ -159,7 +159,12 @@
             align-items: center;
             transition: all 0.2s ease;
             font-size: 0.95rem;
+            line-height: 1.4;
+            font-weight: 400;  /* Обычный вес */ 
         }
+.submenu a[href="literature-projects.html"] {
+    font-weight: 700;  /* ЖИРНЫЙ */
+}
         
         .submenu a:hover {
             background-color: var(--color-surface);
