Fix wording in chapter 5 description

--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1966,7 +1966,7 @@ BeautyPlus. Я даже не помнила, как установила это 
                         <div class="chapter-header" onclick="toggleChapter(this)">
                             <div class="chapter-info">
                                 <h5>Глава 5. Под подозрением</h5>
-                                <p>Технические навыки Артёма делают подозреваемым в атаках на школу.</p>
+                                <p>Технические навыки Артёма делают его подозреваемым в атаках на школу.</p>
                             </div>
                             <div class="chapter-actions">
                                 <a href="files/books/chapters/chapter-05.pdf" download class="chapter-pdf-btn" onclick="event.stopPropagation();">📥 PDF</a>
