--- a/novosti.html
+++ b/novosti.html
@@ -1217,12 +1217,14 @@
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 Январь 2026</span>
+                        <span class="news-card-date">📅 11-16 марта 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
-                    <h3 class="news-card-title">Постановка старшеклассников на воинский учет</h3>
+                    <h3 class="news-card-title">Военно-патриотические сборы с учащимися 10 класса</h3>
                     <p class="news-card-excerpt">
-                   Информация о сроках оформления и сдачи необходимых документов, порядке прохождения мероприятий по постановке на воинский учет. 
+                  На базе Учебного центра патриотического воспитания Приволжского федерального округа "Гвардеец" 
+                  ГБОУ "Нижегородский кадетский корпус Приволжского федерального округа имени генерала армии Маргелова В.Ф."
+                  будут организованы и проведены областные военно-патриотические сборы с юношами учащимися 10 класса.
                     </p>
                     <div class="news-card-footer">
                         <a href="#" class="news-card-link">Подробнее</a>
