--- a/index.html
+++ b/index.html
@@ -1300,14 +1300,6 @@ section h2 {
                 <h3>Ближайшие мероприятия</h3>
                 <ul class="news-summary-list">
                     <li class="news-summary-item">
-                        <span class="news-summary-icon">🏆</span>
-                        <div class="news-summary-content">
-                            <div class="news-summary-date">9-10 декабря 2025</div>
-                            <div class="news-summary-title">Муниципальный этап ВсОШ по ОБЗР</div>
-                            <div class="news-summary-excerpt">Началась работа по подготовке к выступлению на муниципальном этапе олимпиады школьников по ОБЗР.</div>
-                        </div>
-                    </li>
-                    <li class="news-summary-item">
                         <span class="news-summary-icon">🎯</span>
                         <div class="news-summary-content">
                             <div class="news-summary-date">Январь 2026</div>
@@ -1318,9 +1310,22 @@ section h2 {
                     <li class="news-summary-item">
                         <span class="news-summary-icon">⭐</span>
                         <div class="news-summary-content">
-                            <div class="news-summary-date">Январь 2026</div>
-                            <div class="news-summary-title">Постановка старшекассников на воинский учет</div>
-                            <div class="news-summary-excerpt">Информация о порядке и сроках оформления и сдачи необходимых документов.</div>
+                            <div class="news-summary-date">11-16 марта 2026</div>
+                            <div class="news-summary-title">Военно-патриотические сборы с учащимися 10 класса</div>
+                            <div class="news-summary-excerpt">На базе Учебного центра патриотического воспитания 
+                                Приволжского федерального округа "Гвардеец" ГБОУ "Нижегородский кадетский корпус 
+                                Приволжского федерального округа имени генерала армии Маргелова В.Ф." будут организованы 
+                                и проведены областные военно-патриотические сборы с юношами учащимися 10 класса.</div>
+                        </div>
+                    </li>
+                    <li class="news-summary-item">
+                        <span class="news-summary-icon">🏆</span>
+                        <div class="news-summary-content">
+                            <div class="news-summary-date">Март 2026</div>
+                            <div class="news-summary-title">Муниципальный этап военно-спортивной игры "Зарница 2.0"</div>
+                            <div class="news-summary-excerpt">Победители и призёры школьного этапа военно-спортивной игры "
+                                Зарница 2.0" примут участе в муниципальном этапе, который будет проходить на базе
+                                ФОК "Олимп"</div>
                         </div>
                     </li>
                 </ul>
@@ -1932,6 +1937,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
