--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@ section h2 {
                             <div class="news-summary-date">Март 2026</div>
                             <div class="news-summary-title">Муниципальный этап военно-спортивной игры "Зарница 2.0"</div>
                             <div class="news-summary-excerpt">Победители и призёры школьного этапа военно-спортивной игры "
-                                Зарница 2.0" примут участе в муниципальном этапе, который будет проходить на базе
+                                Зарница 2.0" примут участие в муниципальном этапе, который будет проходить на базе
                                 ФОК "Олимп"</div>
                         </div>
                     </li>
@@ -1952,6 +1952,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
