--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/106461008" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+<meta name="google-site-verification" content="fP1TTRn_dwNnF0Pkyl9ymzWASfDP5dRGz7RmloHgvgU" />
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Персональный сайт преподавателя-организатора ОБЗР Дёмина Александра Юрьевича, МБОУ СШ № 2 г. Лысково">
@@ -1952,6 +1954,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
