--- a/index.html
+++ b/index.html
@@ -26,16 +26,23 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/emblem-obzr.png.png">
+<meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
+<meta property="og:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
+<meta property="og:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, достижения учащихся, военно-патриотическая работа.">
+<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-generator">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:image:alt" content="Эмблема ОБЗР МБОУ СШ № 2 Лысково">
+<meta property="og:site_name" content="Дёмин А.Ю. - Преподаватель-организатор ОБЗР">
 <meta property="og:locale" content="ru_RU">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://obzr77.github.io/demin-obzr-site/">
+<meta name="twitter:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
+<meta name="twitter:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, достижения учащихся.">
 <meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/emblem-obzr.png.png">
+
     
     <meta name="description" content="Персональный сайт преподавателя-организатора ОБЗР Дёмина Александра Юрьевича, МБОУ СШ № 2 г. Лысково">
     <title>Дёмин А.Ю. | Преподаватель-организатор ОБЗР</title>
@@ -1971,6 +1978,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
