--- a/index.html
+++ b/index.html
@@ -18,21 +18,14 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- ============================================
-     OPEN GRAPH МЕТАТЕГИ для index.html
-     Вставить в <head> после <meta name="viewport">
-     ============================================ -->
-
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta property="og:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
-<meta property="og:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, достижения учащихся, военно-патриотическая работа.">
-<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-generator">
+<meta property="og:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, ИИ-проекты.">
+<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="Эмблема ОБЗР МБОУ СШ № 2 Лысково">
 <meta property="og:site_name" content="Дёмин А.Ю. - Преподаватель-организатор ОБЗР">
 <meta property="og:locale" content="ru_RU">
 
@@ -40,10 +33,9 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta name="twitter:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
-<meta name="twitter:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, достижения учащихся.">
-<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/emblem-obzr.png.png">
-
-    
+<meta name="twitter:description" content="Персональный сайт преподавателя-организатора ОБЗР. Методические материалы, портфолио, ИИ-проекты.">
+<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
+```  
     <meta name="description" content="Персональный сайт преподавателя-организатора ОБЗР Дёмина Александра Юрьевича, МБОУ СШ № 2 г. Лысково">
     <title>Дёмин А.Ю. | Преподаватель-организатор ОБЗР</title>
     <style>
@@ -1978,6 +1970,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
