--- a/index.html
+++ b/index.html
@@ -18,24 +18,26 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
-<meta property="og:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
-<meta property="og:description" content="Персональный сайт преподавателя-организатора ОБЗР МБОУ СШ № 2 г. Лысково. Методические материалы, портфолио, ИИ-проекты.">
-<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
+<meta property="og:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
+<meta property="og:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты в образовании. МБОУ СШ № 2 г. Лысково, Нижегородская область.">
+<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:site_name" content="Дёмин А.Ю. - Преподаватель-организатор ОБЗР">
+<meta property="og:image:alt" content="Дёмин А.Ю. - Преподаватель-организатор ОБЗР">
+<meta property="og:site_name" content="Дёмин А.Ю. - ОБЗР">
 <meta property="og:locale" content="ru_RU">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://obzr77.github.io/demin-obzr-site/">
-<meta name="twitter:title" content="Дёмин Александр Юрьевич | Преподаватель-организатор ОБЗР">
-<meta name="twitter:description" content="Персональный сайт преподавателя-организатора ОБЗР. Методические материалы, портфолио, ИИ-проекты.">
-<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
-```  
+<meta name="twitter:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
+<meta name="twitter:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты. МБОУ СШ № 2 г. Лысково.">
+<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image.png">
+    
     <meta name="description" content="Персональный сайт преподавателя-организатора ОБЗР Дёмина Александра Юрьевича, МБОУ СШ № 2 г. Лысково">
     <title>Дёмин А.Ю. | Преподаватель-организатор ОБЗР</title>
     <style>
@@ -1970,6 +1972,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
