--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Open Graph / Facebook -->
+<!-- Open Graph / Facebook / VK -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta property="og:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
 <meta property="og:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты в образовании. МБОУ СШ № 2 г. Лысково, Нижегородская область.">
-<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
+<meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image.png">
+<meta property="og:image:secure_url" content="https://obzr77.github.io/demin-obzr-site/images/og-image-v2.png">
+<meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 <meta property="og:image:alt" content="Дёмин А.Ю. - Преподаватель-организатор ОБЗР">
@@ -36,8 +38,8 @@
 <meta name="twitter:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta name="twitter:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
 <meta name="twitter:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты. МБОУ СШ № 2 г. Лысково.">
-<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-demin-obzr.png">
-    
+<meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-v2.png">
+```   
     <meta name="description" content="Персональный сайт преподавателя-организатора ОБЗР Дёмина Александра Юрьевича, МБОУ СШ № 2 г. Лысково">
     <title>Дёмин А.Ю. | Преподаватель-организатор ОБЗР</title>
     <style>
@@ -1972,6 +1974,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
