--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta property="og:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
-<meta property="og:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты в образовании.<br>
+<meta property="og:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты, рекомендации для родителей, обратная связь.<br>
 МБОУ СШ № 2 г. Лысково, Нижегородская область.">
 <meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-v2.png">
 <meta property="og:image:type" content="image/png">
@@ -34,7 +34,7 @@
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
-<meta name="twitter:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты.<br>
+<meta name="twitter:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты, рекомендации для родителей, обратная связь.<br>
 МБОУ СШ № 2 г. Лысково.">
 <meta name="twitter:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-v2.png">
 ```   
@@ -1972,6 +1972,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
