--- a/about.html
+++ b/about.html
@@ -728,7 +728,8 @@ document.addEventListener('keydown', function(event) {
                 <ul> 
                     <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                     <li><strong>Педагогический стаж:</strong> 2 года</li>
-                    <li><strong>Квалификационная категория:</strong> Подготовка к аттестации на первую категорию</li>
+                    <li><strong>Квалификационная категория:</strong> Первая квалификационная категория<br>
+                    Приказ Министерства образования и науки Нижегородской области от 26.12.2025 № 316-01-63-2765/25</li>
                     <li><strong>Преподаваемый предмет (основной):</strong> ОБЗР, 8-11 классы</li>
                     <li><strong>Дополнительные преподаваемые предметы:</strong> 
                         <div style="margin-left: 0; margin-top: 0.5rem;">
@@ -1502,6 +1503,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
