--- a/documents.html
+++ b/documents.html
@@ -1258,7 +1258,7 @@
         <!-- Статистика -->
         <div class="stats-grid">
             <div class="stat-card">
-                <div class="stat-number">25</div>
+                <div class="stat-number">26</div>
                 <div class="stat-label">Всего документов</div>
             </div>
             <div class="stat-card">
@@ -1770,13 +1770,13 @@
                 </div>
             </div>
 
-            <!-- БЛОК 5: Приказы по школе -->
+            <!-- БЛОК 5: Приказы  -->
             <div class="accordion-item">
                 <div class="accordion-header" onclick="toggleAccordion(this)">
                     <div class="accordion-title">
                         <span class="accordion-icon">📋</span>
-                        <span>Приказы по школе</span>
-                        <span class="accordion-badge">3 документа</span>
+                        <span>Приказы</span>
+                        <span class="accordion-badge">4 документа</span>
                     </div>
                     <span class="accordion-arrow">▼</span>
                 </div>
@@ -1793,6 +1793,24 @@
                             <tbody>
                                 <tr>
                                     <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">📝</span>
+                                            <span>Об установлении первой квалификационной категории</span>
+                                        </div>
+                                    </td>
+                                    <td class="doc-date">26.12.2025</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-yuid.pdf', 'Приказ')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="porfolio/prikaz-po-yuid.pdf" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                  <tr>
+                                    <td>
+                                        <div class="doc-name"> 
                                         <div class="doc-name">
                                             <span class="doc-icon">📝</span>
                                             <span>О создании отряда юных инспекторов движения</span>
