--- a/about.html
+++ b/about.html
@@ -729,7 +729,7 @@ document.addEventListener('keydown', function(event) {
                     <li><strong>Должность:</strong> Преподаватель-организатор ОБЗР</li>
                     <li><strong>Педагогический стаж:</strong> 2 года</li>
                     <li><strong>Квалификационная категория:</strong> Первая квалификационная категория<br>
-                    Приказ Министерства образования и науки Нижегородской области <br>
+                    Установлена приказом Министерства образования и науки Нижегородской области <br>
                     от 26.12.2025 № 316-01-63-2765/25</li>
                     <li><strong>Преподаваемый предмет (основной):</strong> ОБЗР, 8-11 классы</li>
                     <li><strong>Дополнительные преподаваемые предметы:</strong> 
@@ -1504,6 +1504,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
