--- a/documents.html
+++ b/documents.html
@@ -1800,10 +1800,10 @@
                                     </td>
                                     <td class="doc-date">26.12.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-yuid.pdf', 'Приказ')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-kategorii.pdf', 'Приказ')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="porfolio/prikaz-po-yuid.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/prikaz-po-kategorii.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
