--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- /Yandex.Metrika counter -->
     
     <meta charset="UTF-8">
+     <meta name="yandex-verification" content="ba07317b6d98342b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Open Graph / Facebook / VK -->
@@ -1971,6 +1972,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
