--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <!-- /Yandex.Metrika counter -->
     
     <meta charset="UTF-8">
-     <meta name="yandex-verification" content="ba07317b6d98342b" />
+    <meta name="yandex-verification" content="ba07317b6d98342b" />
+    <meta name="google-site-verification" content="fP1TTRn_dwNnF0Pkyl9ymzWASfDP5dRGz7RmloHgvgU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Open Graph / Facebook / VK -->
@@ -1972,6 +1973,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
