--- a/feedback.html
+++ b/feedback.html
@@ -529,6 +529,46 @@
                 <!-- Сообщения об успехе/ошибке -->
                 <div id="formStatus" style="display: none;"></div>
 
+<!-- ✅ ДОБАВИТЬ ЭТОТ БЛОК: Чекбокс согласия на обработку ПД -->
+<div class="form-group">
+    <label style="display: flex; 
+                  align-items: flex-start; 
+                  gap: 10px; 
+                  cursor: pointer;
+                  padding: 15px;
+                  background: linear-gradient(135deg, #FFF9E6 0%, #FFF3CD 100%);
+                  border-radius: 8px;
+                  border-left: 3px solid var(--color-primary);">
+        <input type="checkbox" 
+               name="consent" 
+               id="consentCheckbox" 
+               required 
+               style="margin-top: 4px; 
+                      flex-shrink: 0;
+                      width: 18px;
+                      height: 18px;
+                      cursor: pointer;
+                      accent-color: var(--color-primary);">
+        <span style="font-size: 14px; 
+                     line-height: 1.6;
+                     color: #856404;">
+            <strong style="display: block; margin-bottom: 5px; color: var(--color-primary);">
+                📋 Согласие на обработку персональных данных
+            </strong>
+            Я согласен(а) на обработку моих персональных данных в соответствии с 
+            <a href="privacy-policy.html" 
+               target="_blank" 
+               style="color: var(--color-primary); 
+                      text-decoration: underline;
+                      font-weight: 600;">
+                Политикой конфиденциальности
+            </a> 
+            и Федеральным законом № 152-ФЗ «О персональных данных»
+        </span>
+    </label>
+</div>
+<!-- ✅ КОНЕЦ БЛОКА -->
+                
                 <button type="submit" class="submit-button" id="submitBtn" disabled>Отправить сообщение</button>
             </form>
         </div>
@@ -594,17 +634,17 @@
                     <li><a href="https://mil.ru" target="_blank">Минобороны России</a></li>
                 </ul>
             </div>
-
-            <div class="footer-section">
-                <h3>Разделы сайта</h3>
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="portfolio.html">Портфолио</a></li>
-                    <li><a href="ai-projects.html">ИИ в образовании</a></li>
-                    <li><a href="vneurochnaya.html">Активности</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="footer-section">
+    <h3>Разделы сайта</h3>
+    <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+        <li><a href="portfolio.html">Портфолио</a></li>
+        <li><a href="ai-projects.html">ИИ в образовании</a></li>
+        <li><a href="vneurochnaya.html">Активности</a></li>
+    </ul>
+</div>
+</div>
 
         <div class="footer-bottom">
             <p>&copy; 2025 Дёмин Александр Юрьевич. Все права защищены.</p>
