--- a/contacts.html
+++ b/contacts.html
@@ -475,6 +475,7 @@ document.addEventListener('keydown', function(event) {
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
 <li class="has-submenu">
@@ -1210,6 +1211,7 @@ window.addEventListener('load', () => {
 </html>
 
    
+
 
 
 
