--- a/about.html
+++ b/about.html
@@ -698,6 +698,7 @@ document.addEventListener('keydown', function(event) {
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
 
@@ -1504,6 +1505,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
