--- a/ai-dlya-uchenikov.html
+++ b/ai-dlya-uchenikov.html
@@ -672,6 +672,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -1591,5 +1592,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
