--- a/ai-projects.html
+++ b/ai-projects.html
@@ -773,6 +773,7 @@
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
 <li class="has-submenu">
@@ -1624,6 +1625,7 @@ window.addEventListener('load', () => {
 
 
          
+
 
 
 
