--- a/ai-resursy.html
+++ b/ai-resursy.html
@@ -1093,6 +1093,7 @@ body.modal-open {
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
