--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,7 @@ section h2 {
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
  <li class="has-submenu">
@@ -1973,6 +1974,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
