--- a/interactive.html
+++ b/interactive.html
@@ -847,6 +847,7 @@
                             <li><a href="feedback.html">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
@@ -2218,6 +2219,7 @@ if (qrButton && qrModal) {
 </body>
 </html>
         
+
 
 
 
