--- a/documents.html
+++ b/documents.html
@@ -1146,81 +1146,96 @@
         <nav>
             <div class="nav-container">
                 <ul class="nav-menu" id="navMenu">
-                    <li class="has-submenu">
-                        <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
-                        <ul class="submenu">
-                            <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
-                            <li><a href="novosti.html">Последние новости</a></li>
-                        </ul>
-                    </li>
+                 <!-- 1. ГЛАВНАЯ (с подменю) -->
+    <li class="has-submenu">
+      <a href="index.html" onclick="return handleSubmenuClick(event, this)">Главная</a>
+        <ul class="submenu">
+            <li><a href="o-predmete-obzr">О предмете ОБЗР</a></li>
+            <li><a href="novosti">Последние новости</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
-                        <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
-                        <ul class="submenu">
-                            <li><a href="obrazovanie">Образование</a></li>
-                            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="nagrady">Награды и достижения</a></li>
-                        </ul>
-                    </li>
+    <!-- 2. О СЕБЕ (с подменю) -->
+    <li class="has-submenu">
+        <a href="about.html" class="active" onclick="return handleSubmenuClick(event, this)">О себе</a>
+        <ul class="submenu">
+            <li><a href="obrazovanie">Образование</a></li>
+            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
+            <li><a href="nagrady">Награды и достижения</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
-                        <a href="portfolio.html" class="active" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
-                        <ul class="submenu">
-                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="documents.html">Документы портфолио</a></li>
-                        </ul>
-                    </li>
+    <!-- 3. ПОРТФОЛИО (с подменю) -->
+    <li class="has-submenu">
+        <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
+        <ul class="submenu">
+            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
+            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
+            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
+            <li><a href="documents">Документы портфолио</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
-                        <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
-                        <ul class="submenu">
-                            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
-                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-                            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
-                        </ul>
-                    </li>
+    <!-- 4. МЕТОДИКА (с подменю) -->
+    <li class="has-submenu">
+        <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
+        <ul class="submenu">
+            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
+            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
+            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
+            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
-                        <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
-                        <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
-                            <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
-                            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
-                        </ul>
-                    </li>
+    <!-- 5. ИИ В ОБРАЗОВАНИИ (с подменю) -->
+    <li class="has-submenu">
+        <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
+        <ul class="submenu">
+            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
+            <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
+            <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
+            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
-                        <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
-                        <ul class="submenu">
-                            <li><a href="yunarmiya">Юнармия</a></li>
-                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica.html">Зарница 2.0</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="sorevnovaniya">Соревнования и конкурсы</a></li>
-                        </ul>
-                    </li>
+    <!-- 6. АКТИВНОСТИ (с подменю) -->
+    <li class="has-submenu">
+        <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
+        <ul class="submenu">
+            <li><a href="yunarmiya">Юнармия</a></li>
+            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
+            <li><a href="zarnica">Зарница 2.0</a></li>
+            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
+            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
+            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+        </ul>
+    </li>
 
-                    <li class="has-submenu">
+    <!-- 7. РОДИТЕЛЯМ (с подменю) -->
+     <li class="has-submenu">
                         <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="raspisanie-konsultacij">Расписание консультаций</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы</a></li>
+                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
+                            <li><a href="feedback">Обратная связь</a></li>
+                            <li><a href="grading">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
 
+    <!-- 8. КОНТАКТЫ (БЕЗ подменю) -->
                     <li class="has-submenu">
-                        <a href="contacts.html" onclick="return handleSubmenuClick(event, this)">Контакты</a>
-                        <ul class="submenu">
-                            <li><a href="forma-svyazi">Форма обратной связи</a></li>
-                            <li><a href="rekvizity">Реквизиты и адрес</a></li>
-                        </ul>
-                    </li>
+    <a href="contacts.html" onclick="return handleSubmenuClick(event, this)">Контакты</a>
+    <ul class="submenu">
+        <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
+        <li><a href="contacts.html#about-school">О школе</a></li>
+        <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+    </ul>
+</li>
 
-                    <li class="has-submenu">
+    <li class="has-submenu">
                         <a href="interactive.html" onclick="return handleSubmenuClick(event, this)">💬 Отзыв о сайте</a>
                         <ul class="submenu">   
                             <li><a href="interactive.html">Оставить отзыв о работе сайта</a></li> 
