--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -855,6 +855,7 @@ main > .slider-btn,
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
@@ -2179,6 +2180,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
