--- a/feedback.html
+++ b/feedback.html
@@ -292,7 +292,7 @@
                             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -326,6 +326,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
