--- a/help-at-home.html
+++ b/help-at-home.html
@@ -672,7 +672,7 @@ document.addEventListener('keydown', function(event) {
             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
         </ul>
     </li>
 
@@ -709,6 +709,7 @@ document.addEventListener('keydown', function(event) {
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
 <li class="has-submenu">
