--- a/interactive.html
+++ b/interactive.html
@@ -813,7 +813,7 @@
                             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -2219,6 +2219,7 @@ if (qrButton && qrModal) {
 </body>
 </html>
         
+
 
 
 
