--- a/index.html
+++ b/index.html
@@ -1127,10 +1127,10 @@ section h2 {
                     <li class="has-submenu">
                         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
-                            <li><a href="portfolio.html#rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
+                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
-                            <li><a href="portfolio.html#metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="portfolio.html#dokumenty">Документы портфолио</a></li>
+                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
+                            <li><a href="dokumenty">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -1150,19 +1150,19 @@ section h2 {
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
                         <ul class="submenu">
-                            <li><a href="vneurochnaya.html#yunarmiya">Юнармия</a></li>
-                            <li><a href="vneurochnaya.html#yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="vneurochnaya.html#zarnica">Зарница 2.0</a></li>
-                            <li><a href="vneurochnaya.html#olimpiady">Олимпиады по ОБЗР</a></li>
-                            <li><a href="vneurochnaya.html#uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vneurochnaya.html#vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+                            <li><a href="yunarmiya">Юнармия</a></li>
+                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
+                            <li><a href="zarnica">Зарница 2.0</a></li>
+                            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
+                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
+                            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
   
@@ -1974,6 +1974,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
