--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@ section h2 {
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty.html">Документы портфолио</a></li>
+                            <li><a href="dokuments.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -1974,6 +1974,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
