--- a/interactive.html
+++ b/interactive.html
@@ -793,7 +793,7 @@
                             <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="dokumenty">Документы портфолио</a></li>
+                            <li><a href="dokuments">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -2219,6 +2219,7 @@ if (qrButton && qrModal) {
 </body>
 </html>
         
+
 
 
 
