--- a/interactive.html
+++ b/interactive.html
@@ -781,39 +781,39 @@
                     <li class="has-submenu">
                         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
                         <ul class="submenu">
-                            <li><a href="obrazovanie">Образование</a></li>
-                            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="nagrady">Награды и достижения</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
+                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
-                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="documents">Документы портфолио</a></li>
+                            <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
+                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
-                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-                            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
-                            <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
+                            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -832,12 +832,12 @@
                     <li class="has-submenu">
                         <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
-                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
-                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
+                            <li><a href="help-at-home.html">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps.html">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue.html">Диалоги о безопасности</a></li>
                             <li><a href="feedback.html">Обратная связь с учителем</a></li>
-                            <li><a href="grading">Как оценивается ОБЗР</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
+                            <li><a href="grading.html">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
 
@@ -2219,6 +2219,7 @@ if (qrButton && qrModal) {
 </body>
 </html>
         
+
 
 
 
