--- a/literature-projects.html
+++ b/literature-projects.html
@@ -951,16 +951,16 @@
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков</a></li>
-                            <li><a href="metodika.html#prezentacii-testy">Презентации и тесты</a></li>
-                            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации и тесты</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -969,7 +969,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -1000,6 +1000,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
